syntax = "proto3";
package protos.playbooks;

import "google/protobuf/wrappers.proto";

message Jenkins {
  message LastBuildDetails {
    google.protobuf.StringValue job_name = 1;
  }

  enum TaskType {
    UNKNOWN = 0;
    FETCH_LAST_BUILD_DETAILS = 1;
  }

  TaskType type = 1;
  oneof task {
    LastBuildDetails fetch_last_build_details = 2;
  }
}